hover btn fixed

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,8 @@
 <div class="container">
   <div class="banner">
     <h1 class="banner_text">Гуманітарна та медична допомога Україні</h1>
+
+    <div class="arr_btn down js-next-screen"></div>
   </div>
 
   <div class="page_nav js-nav-container"></div>
@@ -182,7 +184,7 @@
       </a>
     </div>
 
-    <div class="up_btn js-scroll-top"></div>
+    <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
 </body>
