--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Council Freedom</title>
-<link href="assets/css/app.2e451e1882b5a20b3d54.css" rel="stylesheet"></head>
+<link href="assets/css/app.b70f4b7ffdc5bad21af6.css" rel="stylesheet"></head>
 
 <body>
 <header class="header">
   <div class="container">
     <a href="/" class="header_logo">
-      <img src="/assets/img/svg/logo.svg" alt="Logo">
+      <img src="./assets/img/svg/logo.svg" alt="Logo">
     </a>
 
     <div class="lang">
@@ -22,10 +22,10 @@
 
     <div class="socials">
       <a href="/" class="socials-item" target="_blank">
-        <img src="/assets/img/svg/icon-facebook.svg" alt="facebook">
+        <img src="./assets/img/svg/icon-facebook.svg" alt="facebook">
       </a>
       <a href="/" class="socials-item" target="_blank">
-        <img src="/assets/img/svg/icon-instagram.svg" alt="instagram">
+        <img src="./assets/img/svg/icon-instagram.svg" alt="instagram">
       </a>
     </div>
   </div>
@@ -43,8 +43,8 @@
   <div class="width_block black">
     <div class="width_block-banner">
       <picture>
-        <source srcset="/assets/img/black-banner@2x.png 2x, /assets/img/black-banner.png 1x"/>
-        <img src="/assets/img/black-banner.png"/>
+        <source srcset="./assets/img/black-banner@2x.png 2x, /assets/img/black-banner.png 1x"/>
+        <img src="./assets/img/black-banner.png"/>
       </picture>
     </div>
     <div class="width_block-info">
@@ -76,8 +76,8 @@
       </div>
       <div class="block_one-img">
         <picture>
-          <source srcset="/assets/img/img-1@2x.png 2x, /assets/img/img-1.png 1x"/>
-          <img src="/assets/img/img-1.png"/>
+          <source srcset="./assets/img/img-1@2x.png 2x, /assets/img/img-1.png 1x"/>
+          <img src="./assets/img/img-1.png"/>
         </picture>
       </div>
     </div>
@@ -94,8 +94,8 @@
       </div>
       <div class="block_one-img">
         <picture>
-          <source srcset="/assets/img/img-2@2x.png 2x, /assets/img/img-2.png 1x"/>
-          <img src="/assets/img/img-2.png"/>
+          <source srcset="./assets/img/img-2@2x.png 2x, /assets/img/img-2.png 1x"/>
+          <img src="./assets/img/img-2.png"/>
         </picture>
       </div>
     </div>
@@ -112,8 +112,8 @@
       </div>
       <div class="block_one-img">
         <picture>
-          <source srcset="/assets/img/img-3@2x.png 2x, /assets/img/img-3.png 1x"/>
-          <img src="/assets/img/img-3.png"/>
+          <source srcset="./assets/img/img-3@2x.png 2x, /assets/img/img-3.png 1x"/>
+          <img src="./assets/img/img-3.png"/>
         </picture>
       </div>
     </div>
@@ -131,8 +131,8 @@
       </div>
       <div class="block_one-img">
         <picture>
-          <source srcset="/assets/img/img-4@2x.png 2x, /assets/img/img-4.png 1x"/>
-          <img src="/assets/img/img-4.png"/>
+          <source srcset="./assets/img/img-4@2x.png 2x, /assets/img/img-4.png 1x"/>
+          <img src="./assets/img/img-4.png"/>
         </picture>
       </div>
     </div>
@@ -141,8 +141,8 @@
   <div class="width_block white half">
     <div class="width_block-banner">
       <picture>
-        <source srcset="/assets/img/flag-banner@2x.png 2x, /assets/img/flag-banner.png 1x"/>
-        <img src="/assets/img/flag-banner.png"/>
+        <source srcset="./assets/img/flag-banner@2x.png 2x, /assets/img/flag-banner.png 1x"/>
+        <img src="./assets/img/flag-banner.png"/>
       </picture>
     </div>
     <div class="width_block-info">
@@ -165,7 +165,7 @@
 <footer class="footer">
   <div class="container">
     <a href="/" class="footer_logo">
-      <img src="/assets/img/svg/logo-white.svg" alt="Logo">
+      <img src="./assets/img/svg/logo-white.svg" alt="Logo">
     </a>
 
     <div class="lang">
@@ -175,16 +175,16 @@
 
     <div class="socials">
       <a href="/" class="socials-item" target="_blank">
-        <img src="/assets/img/svg/icon-facebook-white.svg" alt="facebook">
+        <img src="./assets/img/svg/icon-facebook-white.svg" alt="facebook">
       </a>
       <a href="/" class="socials-item" target="_blank">
-        <img src="/assets/img/svg/icon-instagram-white.svg" alt="instagram">
+        <img src="./assets/img/svg/icon-instagram-white.svg" alt="instagram">
       </a>
     </div>
 
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.2e451e1882b5a20b3d54.js"></script><script type="text/javascript" src="assets/js/app.2e451e1882b5a20b3d54.js"></script><script type="text/javascript" src="assets/js/lk.2e451e1882b5a20b3d54.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.b70f4b7ffdc5bad21af6.js"></script><script type="text/javascript" src="assets/js/app.b70f4b7ffdc5bad21af6.js"></script><script type="text/javascript" src="assets/js/lk.b70f4b7ffdc5bad21af6.js"></script></body>
 
 </html>
