--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <!--deletestart-->
   <link rel="stylesheet" type="text/css" href="assets/scss/main.scss"/>
   <!--deleteend-->
+  <link rel="icon" href="./favicon.ico">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Council Freedom</title>
@@ -14,7 +15,7 @@
 <header class="header">
   <div class="container">
     <a href="/" class="header_logo">
-      <img src="/assets/img/svg/logo.svg" alt="Logo">
+      <img src="./assets/img/svg/logo.svg" alt="Logo">
     </a>
 
     <div class="lang">
@@ -24,10 +25,10 @@
 
     <div class="socials">
       <a href="/" class="socials-item" target="_blank">
-        <img src="/assets/img/svg/icon-facebook.svg" alt="facebook">
+        <img src="./assets/img/svg/icon-facebook.svg" alt="facebook">
       </a>
       <a href="/" class="socials-item" target="_blank">
-        <img src="/assets/img/svg/icon-instagram.svg" alt="instagram">
+        <img src="./assets/img/svg/icon-instagram.svg" alt="instagram">
       </a>
     </div>
   </div>
@@ -45,8 +46,8 @@
   <div class="width_block black">
     <div class="width_block-banner">
       <picture>
-        <source srcset="/assets/img/black-banner@2x.png 2x, /assets/img/black-banner.png 1x"/>
-        <img src="/assets/img/black-banner.png"/>
+        <source srcset="./assets/img/black-banner@2x.png 2x, /assets/img/black-banner.png 1x"/>
+        <img src="./assets/img/black-banner.png"/>
       </picture>
     </div>
     <div class="width_block-info">
@@ -78,8 +79,8 @@
       </div>
       <div class="block_one-img">
         <picture>
-          <source srcset="/assets/img/img-1@2x.png 2x, /assets/img/img-1.png 1x"/>
-          <img src="/assets/img/img-1.png"/>
+          <source srcset="./assets/img/img-1@2x.png 2x, /assets/img/img-1.png 1x"/>
+          <img src="./assets/img/img-1.png"/>
         </picture>
       </div>
     </div>
@@ -96,8 +97,8 @@
       </div>
       <div class="block_one-img">
         <picture>
-          <source srcset="/assets/img/img-2@2x.png 2x, /assets/img/img-2.png 1x"/>
-          <img src="/assets/img/img-2.png"/>
+          <source srcset="./assets/img/img-2@2x.png 2x, /assets/img/img-2.png 1x"/>
+          <img src="./assets/img/img-2.png"/>
         </picture>
       </div>
     </div>
@@ -114,8 +115,8 @@
       </div>
       <div class="block_one-img">
         <picture>
-          <source srcset="/assets/img/img-3@2x.png 2x, /assets/img/img-3.png 1x"/>
-          <img src="/assets/img/img-3.png"/>
+          <source srcset="./assets/img/img-3@2x.png 2x, /assets/img/img-3.png 1x"/>
+          <img src="./assets/img/img-3.png"/>
         </picture>
       </div>
     </div>
@@ -133,8 +134,8 @@
       </div>
       <div class="block_one-img">
         <picture>
-          <source srcset="/assets/img/img-4@2x.png 2x, /assets/img/img-4.png 1x"/>
-          <img src="/assets/img/img-4.png"/>
+          <source srcset="./assets/img/img-4@2x.png 2x, /assets/img/img-4.png 1x"/>
+          <img src="./assets/img/img-4.png"/>
         </picture>
       </div>
     </div>
@@ -143,8 +144,8 @@
   <div class="width_block white half">
     <div class="width_block-banner">
       <picture>
-        <source srcset="/assets/img/flag-banner@2x.png 2x, /assets/img/flag-banner.png 1x"/>
-        <img src="/assets/img/flag-banner.png"/>
+        <source srcset="./assets/img/flag-banner@2x.png 2x, /assets/img/flag-banner.png 1x"/>
+        <img src="./assets/img/flag-banner.png"/>
       </picture>
     </div>
     <div class="width_block-info">
@@ -167,7 +168,7 @@
 <footer class="footer">
   <div class="container">
     <a href="/" class="footer_logo">
-      <img src="/assets/img/svg/logo-white.svg" alt="Logo">
+      <img src="./assets/img/svg/logo-white.svg" alt="Logo">
     </a>
 
     <div class="lang">
@@ -177,10 +178,10 @@
 
     <div class="socials">
       <a href="/" class="socials-item" target="_blank">
-        <img src="/assets/img/svg/icon-facebook-white.svg" alt="facebook">
+        <img src="./assets/img/svg/icon-facebook-white.svg" alt="facebook">
       </a>
       <a href="/" class="socials-item" target="_blank">
-        <img src="/assets/img/svg/icon-instagram-white.svg" alt="instagram">
+        <img src="./assets/img/svg/icon-instagram-white.svg" alt="instagram">
       </a>
     </div>
 
