--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 <head>
   
+  <link rel="icon" href="./favicon.ico">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Council Freedom</title>
-<link href="assets/css/app.b70f4b7ffdc5bad21af6.css" rel="stylesheet"></head>
+<link href="assets/css/app.4b9bebe01225597674fa.css" rel="stylesheet"></head>
 
 <body>
 <header class="header">
@@ -185,6 +186,6 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.b70f4b7ffdc5bad21af6.js"></script><script type="text/javascript" src="assets/js/app.b70f4b7ffdc5bad21af6.js"></script><script type="text/javascript" src="assets/js/lk.b70f4b7ffdc5bad21af6.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.4b9bebe01225597674fa.js"></script><script type="text/javascript" src="assets/js/app.4b9bebe01225597674fa.js"></script></body>
 
 </html>
