--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Council Freedom</title>
-<link href="assets/css/app.4b9bebe01225597674fa.css" rel="stylesheet"></head>
+<link href="./assets/css/app.d6ab7e9b8341ea779e52.css" rel="stylesheet"></head>
 
 <body>
 <header class="header">
@@ -43,10 +43,7 @@
 
   <div class="width_block black">
     <div class="width_block-banner">
-      <picture>
-        <source srcset="./assets/img/black-banner@2x.png 2x, /assets/img/black-banner.png 1x"/>
-        <img src="./assets/img/black-banner.png"/>
-      </picture>
+      <img width="1600" height="340" src="./assets/img/black-banner.png"/>
     </div>
     <div class="width_block-info">
       <div class="width_block-info_title">
@@ -76,10 +73,7 @@
         </div>
       </div>
       <div class="block_one-img">
-        <picture>
-          <source srcset="./assets/img/img-1@2x.png 2x, /assets/img/img-1.png 1x"/>
-          <img src="./assets/img/img-1.png"/>
-        </picture>
+        <img width="625" height="640" src="./assets/img/img-1.png"/>
       </div>
     </div>
     <div class="block_one js-target-block">
@@ -94,10 +88,7 @@
         </div>
       </div>
       <div class="block_one-img">
-        <picture>
-          <source srcset="./assets/img/img-2@2x.png 2x, /assets/img/img-2.png 1x"/>
-          <img src="./assets/img/img-2.png"/>
-        </picture>
+        <img width="625" height="640" src="./assets/img/img-2.png"/>
       </div>
     </div>
     <div class="block_one js-target-block">
@@ -112,10 +103,7 @@
         </div>
       </div>
       <div class="block_one-img">
-        <picture>
-          <source srcset="./assets/img/img-3@2x.png 2x, /assets/img/img-3.png 1x"/>
-          <img src="./assets/img/img-3.png"/>
-        </picture>
+        <img width="625" height="640" src="./assets/img/img-3.png"/>
       </div>
     </div>
     <div class="block_one js-target-block">
@@ -131,20 +119,14 @@
         </div>
       </div>
       <div class="block_one-img">
-        <picture>
-          <source srcset="./assets/img/img-4@2x.png 2x, /assets/img/img-4.png 1x"/>
-          <img src="./assets/img/img-4.png"/>
-        </picture>
+        <img width="625" height="640" src="./assets/img/img-4.png"/>
       </div>
     </div>
   </div>
 
   <div class="width_block white half">
     <div class="width_block-banner">
-      <picture>
-        <source srcset="./assets/img/flag-banner@2x.png 2x, /assets/img/flag-banner.png 1x"/>
-        <img src="./assets/img/flag-banner.png"/>
-      </picture>
+      <img width="1600" height="340" src="./assets/img/flag-banner.png"/>
     </div>
     <div class="width_block-info">
       <div class="width_block-info_title">
@@ -186,6 +168,6 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.4b9bebe01225597674fa.js"></script><script type="text/javascript" src="assets/js/app.4b9bebe01225597674fa.js"></script></body>
+<script type="text/javascript" src="./assets/js/vendors.d6ab7e9b8341ea779e52.js"></script><script type="text/javascript" src="./assets/js/app.d6ab7e9b8341ea779e52.js"></script></body>
 
 </html>
