--- a/en/index.html
+++ b/en/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="en">
 
 <head>
   
@@ -7,18 +7,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Council of freedom</title>
-<link href="assets/css/app.09f7401130b0ff774994.css" rel="stylesheet"></head>
+<link href="../assets/css/app.09f7401130b0ff774994.css" rel="stylesheet"></head>
 
 <body>
 <header class="header">
   <div class="container">
-    <a href="/" class="header_logo">
-      <img src="/assets/img/svg/logo.svg" alt="Logo">
+    <a href="/en/" class="header_logo">
+      <img src="/assets/img/svg/logo.svg" alt="Council of freedom">
     </a>
 
     <div class="lang">
-      <a href="/en/" class="lang-item">en</a>
-      <a href="/" class="lang-item active">ua</a>
+      <a href="/en/" class="lang-item active">en</a>
+      <a href="/" class="lang-item">ua</a>
     </div>
 
     <div class="socials">
@@ -34,7 +34,7 @@
 
 <div class="container">
   <div class="banner">
-    <h1 class="banner_text">Гуманітарна та медична допомога Україні</h1>
+    <h1 class="banner_text">Humanitarian and medical assistance to Ukraine</h1>
 
     <div class="arr_btn down js-next-screen"></div>
   </div>
@@ -61,7 +61,6 @@
   </div>
 
   <div class="blocks">
-    <!--Block 1-->
     <div class="block_one js-target-block">
       <div class="block_one-info">
         <div class="block_one-info_title js-nav-target">Збір коштів для гуманітарної допомоги</div>
@@ -70,15 +69,13 @@
           терміново потрібні ліки, продукти, ковдри, теплий одяг та інша гуманітарна допомога.
         </div>
         <div class="">
-          <button class="block_one-info_btn btn">Надіслати кошти на гуманітарну допомогу</button>
+          <div class="block_one-info_btn btn">Надіслати кошти на гуманітарну допомогу</div>
         </div>
       </div>
       <div class="block_one-img">
         <img width="625" height="640" src="/assets/img/img-1.png"/>
       </div>
     </div>
-
-    <!--Block 2-->
     <div class="block_one js-target-block">
       <div class="block_one-info">
         <div class="block_one-info_title js-nav-target">Надіслати гуманітарну допомогу</div>
@@ -87,19 +84,13 @@
           терміново потрібні ліки, продукти, ковдри, теплий одяг та інша гуманітарна допомога.
         </div>
         <div class="">
-          <button class="block_one-info_btn btn js-help-btn"
-                  data-link="https://docs.google.com/forms/d/1bZ2TJV67Nb1gPdgU3bdjZJl7GpOEy6SH_89tV149DKY/edit"
-          >
-            Заповнити анкету для надання гуманітарної допомоги
-          </button>
+          <div class="block_one-info_btn btn">Заповнити анкету для надання гуманітарної допомоги</div>
         </div>
       </div>
       <div class="block_one-img">
         <img width="625" height="640" src="/assets/img/img-2.png"/>
       </div>
     </div>
-
-    <!--Block 3-->
     <div class="block_one js-target-block">
       <div class="block_one-info">
         <div class="block_one-info_title js-nav-target">Отримати гуманітарну допомогу</div>
@@ -108,19 +99,13 @@
           терміново потрібні ліки, продукти, ковдри, теплий одяг та інша гуманітарна допомога.
         </div>
         <div class="">
-          <button class="block_one-info_btn btn js-help-btn"
-                  data-link="https://docs.google.com/forms/d/1YE_PXlSm7SXEeEkyzHv8_vlqBxXSqhmEph6pBKG8Azg/edit"
-          >
-            Заповнити анкету для отримання гуманітарної допомоги
-          </button>
+          <div class="block_one-info_btn btn">Заповнити анкету для отримання гуманітарної допомоги</div>
         </div>
       </div>
       <div class="block_one-img">
         <img width="625" height="640" src="/assets/img/img-3.png"/>
       </div>
     </div>
-
-    <!--Block 4-->
     <div class="block_one js-target-block">
       <div class="block_one-info">
         <div class="block_one-info_title js-nav-target">Збір коштів навідновлення зруйнованого майна та інфраструктури
@@ -130,7 +115,7 @@
           терміново потрібні ліки, продукти, ковдри, теплий одяг та інша гуманітарна допомога.
         </div>
         <div class="">
-          <button class="block_one-info_btn btn">Надіслати кошти на гуманітарну допомогу</button>
+          <div class="block_one-info_btn btn">Надіслати кошти на гуманітарну допомогу</div>
         </div>
       </div>
       <div class="block_one-img">
@@ -170,13 +155,13 @@
 
 <footer class="footer">
   <div class="container">
-    <a href="/" class="footer_logo">
+    <a href="/en/" class="footer_logo">
       <img src="/assets/img/svg/logo-white.svg" alt="Logo">
     </a>
 
     <div class="lang">
-      <a href="/en/" class="lang-item">en</a>
-      <a href="/" class="lang-item active">ua</a>
+      <a href="/en/" class="lang-item active">en</a>
+      <a href="/" class="lang-item">ua</a>
     </div>
 
     <div class="socials">
@@ -191,6 +176,6 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.09f7401130b0ff774994.js"></script><script type="text/javascript" src="assets/js/app.09f7401130b0ff774994.js"></script></body>
+<script type="text/javascript" src="../assets/js/vendors.09f7401130b0ff774994.js"></script><script type="text/javascript" src="../assets/js/app.09f7401130b0ff774994.js"></script></body>
 
 </html>
