--- a/src/index.html
+++ b/src/index.html
@@ -5,30 +5,30 @@
   <!--deletestart-->
   <link rel="stylesheet" type="text/css" href="assets/scss/main.scss"/>
   <!--deleteend-->
-  <link rel="icon" href="./favicon.ico">
+  <link rel="icon" href="/favicon.ico">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Council Freedom</title>
+  <title>Council of freedom</title>
 </head>
 
 <body>
 <header class="header">
   <div class="container">
     <a href="/" class="header_logo">
-      <img src="./assets/img/svg/logo.svg" alt="Logo">
+      <img src="/assets/img/svg/logo.svg" alt="Logo">
     </a>
 
     <div class="lang">
-      <a href="/" class="lang-item">en</a>
+      <a href="/en/" class="lang-item">en</a>
       <a href="/" class="lang-item active">ua</a>
     </div>
 
     <div class="socials">
       <a href="/" class="socials-item" target="_blank">
-        <img src="./assets/img/svg/icon-facebook.svg" alt="facebook">
+        <img src="/assets/img/svg/icon-facebook.svg" alt="facebook">
       </a>
       <a href="/" class="socials-item" target="_blank">
-        <img src="./assets/img/svg/icon-instagram.svg" alt="instagram">
+        <img src="/assets/img/svg/icon-instagram.svg" alt="instagram">
       </a>
     </div>
   </div>
@@ -45,10 +45,7 @@
 
   <div class="width_block black">
     <div class="width_block-banner">
-      <picture>
-        <source srcset="./assets/img/black-banner@2x.png 2x, /assets/img/black-banner.png 1x"/>
-        <img src="./assets/img/black-banner.png"/>
-      </picture>
+      <img width="1600" height="340" src="/assets/img/black-banner.png"/>
     </div>
     <div class="width_block-info">
       <div class="width_block-info_title">
@@ -66,24 +63,24 @@
   </div>
 
   <div class="blocks">
+    <!--Block 1-->
     <div class="block_one js-target-block">
       <div class="block_one-info">
-        <div class="block_one-info_title js-nav-target">Збір засобів для гуманітарної допомоги</div>
+        <div class="block_one-info_title js-nav-target">Збір коштів для гуманітарної допомоги</div>
         <div class="block_one-info_text">
           Наразі звичні ланцюги постачання недоступні, а українцям в гарячих точках
           терміново потрібні ліки, продукти, ковдри, теплий одяг та інша гуманітарна допомога.
         </div>
         <div class="">
-          <div class="block_one-info_btn btn">Надіслати кошти на гуманітарну допомогу</div>
+          <button class="block_one-info_btn btn">Надіслати кошти на гуманітарну допомогу</button>
         </div>
       </div>
       <div class="block_one-img">
-        <picture>
-          <source srcset="./assets/img/img-1@2x.png 2x, /assets/img/img-1.png 1x"/>
-          <img src="./assets/img/img-1.png"/>
-        </picture>
+        <img width="625" height="640" src="/assets/img/img-1.png"/>
       </div>
     </div>
+
+    <!--Block 2-->
     <div class="block_one js-target-block">
       <div class="block_one-info">
         <div class="block_one-info_title js-nav-target">Надіслати гуманітарну допомогу</div>
@@ -92,34 +89,40 @@
           терміново потрібні ліки, продукти, ковдри, теплий одяг та інша гуманітарна допомога.
         </div>
         <div class="">
-          <div class="block_one-info_btn btn">Надіслати кошти на гуманітарну допомогу</div>
+          <button class="block_one-info_btn btn js-help-btn"
+                  data-link="https://docs.google.com/forms/d/1bZ2TJV67Nb1gPdgU3bdjZJl7GpOEy6SH_89tV149DKY/edit"
+          >
+            Заповнити анкету для надання гуманітарної допомоги
+          </button>
         </div>
       </div>
       <div class="block_one-img">
-        <picture>
-          <source srcset="./assets/img/img-2@2x.png 2x, /assets/img/img-2.png 1x"/>
-          <img src="./assets/img/img-2.png"/>
-        </picture>
+        <img width="625" height="640" src="/assets/img/img-2.png"/>
       </div>
     </div>
+
+    <!--Block 3-->
     <div class="block_one js-target-block">
       <div class="block_one-info">
-        <div class="block_one-info_title js-nav-target">отримати гуманітарну допомогу</div>
+        <div class="block_one-info_title js-nav-target">Отримати гуманітарну допомогу</div>
         <div class="block_one-info_text">
           Наразі звичні ланцюги постачання недоступні, а українцям в гарячих точках
           терміново потрібні ліки, продукти, ковдри, теплий одяг та інша гуманітарна допомога.
         </div>
         <div class="">
-          <div class="block_one-info_btn btn">Надіслати кошти на гуманітарну допомогу</div>
+          <button class="block_one-info_btn btn js-help-btn"
+                  data-link="https://docs.google.com/forms/d/1YE_PXlSm7SXEeEkyzHv8_vlqBxXSqhmEph6pBKG8Azg/edit"
+          >
+            Заповнити анкету для отримання гуманітарної допомоги
+          </button>
         </div>
       </div>
       <div class="block_one-img">
-        <picture>
-          <source srcset="./assets/img/img-3@2x.png 2x, /assets/img/img-3.png 1x"/>
-          <img src="./assets/img/img-3.png"/>
-        </picture>
+        <img width="625" height="640" src="/assets/img/img-3.png"/>
       </div>
     </div>
+
+    <!--Block 4-->
     <div class="block_one js-target-block">
       <div class="block_one-info">
         <div class="block_one-info_title js-nav-target">Збір коштів навідновлення зруйнованого майна та інфраструктури
@@ -129,36 +132,38 @@
           терміново потрібні ліки, продукти, ковдри, теплий одяг та інша гуманітарна допомога.
         </div>
         <div class="">
-          <div class="block_one-info_btn btn">Надіслати кошти на гуманітарну допомогу</div>
+          <button class="block_one-info_btn btn">Надіслати кошти на гуманітарну допомогу</button>
         </div>
       </div>
       <div class="block_one-img">
-        <picture>
-          <source srcset="./assets/img/img-4@2x.png 2x, /assets/img/img-4.png 1x"/>
-          <img src="./assets/img/img-4.png"/>
-        </picture>
+        <img width="625" height="640" src="/assets/img/img-4.png"/>
       </div>
     </div>
   </div>
 
   <div class="width_block white half">
     <div class="width_block-banner">
-      <picture>
-        <source srcset="./assets/img/flag-banner@2x.png 2x, /assets/img/flag-banner.png 1x"/>
-        <img src="./assets/img/flag-banner.png"/>
-      </picture>
+      <img width="1600" height="340" src="/assets/img/flag-banner.png"/>
     </div>
     <div class="width_block-info">
       <div class="width_block-info_title">
         Про організацію
       </div>
       <div class="width_block-info_text">
-        Баннер + контент (который в целом описывает текущую катастрофу в стране)Баннер + контент (который в целом
-        описывает текущую катастрофу в стране)Баннер + контент (который в целом описывает текущую катастрофу в
-        стране)Баннер + контент (который в целом описывает текущую катастрофу в стране)Баннер + контент (который в целом
-        описывает текущую катастрофу в стране)Баннер + контент (который в целом описывает текущую катастрофу в
-        стране)Баннер + контент (который в целом описывает текущую катастрофу в стране)Баннер + контент (который в целом
-        описывает текущую катастрофу в стране)
+        <p>
+          Council of Freedom - об’єднання вільних духом людей з активною життєвою позицією.
+        </p>
+        <p>
+          Громадська організація Рада Свободи була створена для реалізації благодійних, соціальних та гуманітарних
+          проектів.
+        </p>
+        <p>
+          Нашою головною ідеологією завжди було - зробити людей трохи щасливішими, а світ добрішими та кращим.
+          У такий скрутний для нашої країни час, ми не можемо залишитися осторонь, і зосереджуємо всі наші зусилля та
+          інших не байдужих людей на допомозі та підтримці тих, хто цього потребує, ставши заручниками жорстокої
+          несправедливості, яка змінила життя кожного українця, та і людей по всьому світу назавжди.
+        </p>
+
       </div>
     </div>
   </div>
@@ -168,20 +173,20 @@
 <footer class="footer">
   <div class="container">
     <a href="/" class="footer_logo">
-      <img src="./assets/img/svg/logo-white.svg" alt="Logo">
+      <img src="/assets/img/svg/logo-white.svg" alt="Logo">
     </a>
 
     <div class="lang">
-      <a href="/" class="lang-item">en</a>
+      <a href="/en/" class="lang-item">en</a>
       <a href="/" class="lang-item active">ua</a>
     </div>
 
     <div class="socials">
       <a href="/" class="socials-item" target="_blank">
-        <img src="./assets/img/svg/icon-facebook-white.svg" alt="facebook">
+        <img src="/assets/img/svg/icon-facebook-white.svg" alt="facebook">
       </a>
       <a href="/" class="socials-item" target="_blank">
-        <img src="./assets/img/svg/icon-instagram-white.svg" alt="instagram">
+        <img src="/assets/img/svg/icon-instagram-white.svg" alt="instagram">
       </a>
     </div>
 
