--- a/en/index.html
+++ b/en/index.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Council of freedom</title>
-<link href="../assets/css/app.c514ff8a942122f51778.css" rel="stylesheet"></head>
+<link href="../assets/css/app.c3672c58f0b0c21c0d73.css" rel="stylesheet"></head>
 
 <body>
 <header class="header">
@@ -94,7 +94,11 @@
           </p>
         </div>
         <div class="">
-          <button class="block_one-info_btn btn">To send humanitarian aid.</button>
+          <button class="block_one-info_btn btn js-help-btn"
+                  data-link="https://docs.google.com/forms/d/1bZ2TJV67Nb1gPdgU3bdjZJl7GpOEy6SH_89tV149DKY/edit"
+          >
+            To send humanitarian aid.
+          </button>
         </div>
       </div>
       <div class="block_one-img">
@@ -112,7 +116,11 @@
           </p>
         </div>
         <div class="">
-          <button class="block_one-info_btn btn">Help me</button>
+          <button class="block_one-info_btn btn js-help-btn"
+                  data-link="https://docs.google.com/forms/d/1YE_PXlSm7SXEeEkyzHv8_vlqBxXSqhmEph6pBKG8Azg/edit"
+          >
+            Help me
+          </button>
         </div>
       </div>
       <div class="block_one-img">
@@ -519,6 +527,6 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="../assets/js/vendors.c514ff8a942122f51778.js"></script><script type="text/javascript" src="../assets/js/app.c514ff8a942122f51778.js"></script></body>
+<script type="text/javascript" src="../assets/js/vendors.c3672c58f0b0c21c0d73.js"></script><script type="text/javascript" src="../assets/js/app.c3672c58f0b0c21c0d73.js"></script></body>
 
 </html>
