--- a/src/en/index.html
+++ b/src/en/index.html
@@ -36,7 +36,10 @@
 
 <div class="container">
   <div class="banner">
-    <h1 class="banner_text">Humanitarian and medical help to Ukrainians affected by Russian aggression</h1>
+    <h1 class="banner_text">
+      Save Ukraine all together: humanitarian & medical help for injured citizens during the
+      War
+    </h1>
 
     <div class="arr_btn down js-next-screen"></div>
   </div>
@@ -52,14 +55,19 @@
         Catastrophe description in Ukraine
       </div>
       <div class="width_block-info_text">
-        <p>24<sup>th</sup>of February 2022 year Russian Federation had started military attack to the territory of
-          Ukraine. Armed
-          forces of Ukraine has been fighting off attacks of Russia every day, but air bombing attacks against peaceful
-          cities are still going on, destroying residential quarters in cities and ignoring to provide humanitarian
-          corridors for civil people.</p>
-        <p>2 000 civil citizens killed during several fist weeks of the War, preliminary the same quantity are injured,
-          2 000 000 Ukrainian citizens were forced to leave Ukraine to survive.</p>
-        <p>The whole world is united to stop bloody dictator. Discover what you can do to help with that.</p>
+        <p>
+          24<sup>th</sup>of February 2022 year Russian Federation had started military attack to the territory of
+          Ukraine. Armed forces of Ukraine has been fighting off attacks of Russia every day, but air bombing attacks
+          against peaceful cities are still going on, destroying residential quarters in cities and ignoring to provide
+          humanitarian corridors for civil people.
+        </p>
+        <p>
+          2 000 civil citizens killed during several fist weeks of the War, preliminary the same quantity are injured, 2
+          000 000 Ukrainian citizens were forced to leave Ukraine to survive.
+        </p>
+        <p>
+          The whole world is united to stop bloody dictator. Discover what you can do to help with that.
+        </p>
       </div>
     </div>
   </div>
@@ -99,7 +107,7 @@
           <button class="block_one-info_btn btn js-help-btn"
                   data-link="https://docs.google.com/forms/d/1bZ2TJV67Nb1gPdgU3bdjZJl7GpOEy6SH_89tV149DKY/edit"
           >
-            To send humanitarian aid.
+            To send humanitarian aid
           </button>
         </div>
       </div>
