--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,9 @@
 
 <div class="container">
   <div class="banner">
-    <h1 class="banner_text">Гуманітарна та медична допомога Україні</h1>
+    <h1 class="banner_text">
+      Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії
+    </h1>
 
     <div class="arr_btn down js-next-screen"></div>
   </div>
