--- a/en/index.html
+++ b/en/index.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Council of freedom</title>
-<link href="../assets/css/app.c3672c58f0b0c21c0d73.css" rel="stylesheet"></head>
+<link href="../assets/css/app.07b36487e18d705fcf04.css" rel="stylesheet"></head>
 
 <body>
 <header class="header">
@@ -34,7 +34,10 @@
 
 <div class="container">
   <div class="banner">
-    <h1 class="banner_text">Humanitarian and medical help to Ukrainians affected by Russian aggression</h1>
+    <h1 class="banner_text">
+      Save Ukraine all together: humanitarian & medical help for injured citizens during the
+      War
+    </h1>
 
     <div class="arr_btn down js-next-screen"></div>
   </div>
@@ -50,14 +53,19 @@
         Catastrophe description in Ukraine
       </div>
       <div class="width_block-info_text">
-        <p>24<sup>th</sup>of February 2022 year Russian Federation had started military attack to the territory of
-          Ukraine. Armed
-          forces of Ukraine has been fighting off attacks of Russia every day, but air bombing attacks against peaceful
-          cities are still going on, destroying residential quarters in cities and ignoring to provide humanitarian
-          corridors for civil people.</p>
-        <p>2 000 civil citizens killed during several fist weeks of the War, preliminary the same quantity are injured,
-          2 000 000 Ukrainian citizens were forced to leave Ukraine to survive.</p>
-        <p>The whole world is united to stop bloody dictator. Discover what you can do to help with that.</p>
+        <p>
+          24<sup>th</sup>of February 2022 year Russian Federation had started military attack to the territory of
+          Ukraine. Armed forces of Ukraine has been fighting off attacks of Russia every day, but air bombing attacks
+          against peaceful cities are still going on, destroying residential quarters in cities and ignoring to provide
+          humanitarian corridors for civil people.
+        </p>
+        <p>
+          2 000 civil citizens killed during several fist weeks of the War, preliminary the same quantity are injured, 2
+          000 000 Ukrainian citizens were forced to leave Ukraine to survive.
+        </p>
+        <p>
+          The whole world is united to stop bloody dictator. Discover what you can do to help with that.
+        </p>
       </div>
     </div>
   </div>
@@ -97,7 +105,7 @@
           <button class="block_one-info_btn btn js-help-btn"
                   data-link="https://docs.google.com/forms/d/1bZ2TJV67Nb1gPdgU3bdjZJl7GpOEy6SH_89tV149DKY/edit"
           >
-            To send humanitarian aid.
+            To send humanitarian aid
           </button>
         </div>
       </div>
@@ -527,6 +535,6 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="../assets/js/vendors.c3672c58f0b0c21c0d73.js"></script><script type="text/javascript" src="../assets/js/app.c3672c58f0b0c21c0d73.js"></script></body>
+<script type="text/javascript" src="../assets/js/vendors.07b36487e18d705fcf04.js"></script><script type="text/javascript" src="../assets/js/app.07b36487e18d705fcf04.js"></script></body>
 
 </html>
