--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Council of freedom</title>
-<link href="assets/css/app.c3672c58f0b0c21c0d73.css" rel="stylesheet"></head>
+<link href="assets/css/app.07b36487e18d705fcf04.css" rel="stylesheet"></head>
 
 <body>
 <header class="header">
@@ -34,7 +34,9 @@
 
 <div class="container">
   <div class="banner">
-    <h1 class="banner_text">Гуманітарна та медична допомога Україні</h1>
+    <h1 class="banner_text">
+      Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії
+    </h1>
 
     <div class="arr_btn down js-next-screen"></div>
   </div>
@@ -530,6 +532,6 @@
     <div class="arr_btn js-scroll-top"></div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.c3672c58f0b0c21c0d73.js"></script><script type="text/javascript" src="assets/js/app.c3672c58f0b0c21c0d73.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.07b36487e18d705fcf04.js"></script><script type="text/javascript" src="assets/js/app.07b36487e18d705fcf04.js"></script></body>
 
 </html>
