ENG page translation fixes

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
     </div>
     <div class="width_block-info">
       <div class="width_block-info_title title-1">
-        Блок с описанием катастрофы в стране
+        Опис катастрофи в Україні
       </div>
       <div class="width_block-info_text">
         <p>24 лютого 2022 року відбувся військовий напад РФ на Україну. Збройні сили України щоденно відбивають напад,
